feat: update API client
